--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML ONLY</title>    
+    <title>HTML ONLY</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+        }
+        
+        .navigation {
+            text-align: left;
+            width: 200px;
+        }
+        header{
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <header>
+        <h1>HTML Only</h1>
+        <div class="navigation">
+            <h6>Navigation</h6>
+            <ul>
+                <li><a href="#WHAT">What is this?</a></li>
+                <li><a href="#">How does this work?</a></li>
+                <li><a href="#">But why?</a></li>
+                <li><a href="#">Frameset version</a></li>
+
+            </ul>
+        </div>
+
+    </header>
+    <main>        
+    </main>
+    <footer></footer>
 </body>
 </html>
