--- a/index.html
+++ b/index.html
@@ -52,20 +52,38 @@
             padding: 1px;
             margin-top: 0px;
         }
-        p{
+
+        p {
             margin-bottom: 0px;
         }
+
         .navigation {
             text-align: left;
             width: 200px;
         }
-        
-        footer{
+
+        footer {
             color: white;
             text-align: center;
         }
-        a{
+
+        a {
             cursor: pointer;
+        }
+
+        .triangle-right {
+            width: 0;
+            height: 0;
+            border-top: 5px solid transparent;
+            border-left: 12.5px solid white;
+            border-bottom: 5px solid transparent;
+        }
+
+        .navigationTitle {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
         }
     </style>
 </head>
@@ -74,7 +92,11 @@
     <header>
         <h1>HTML Only</h1>
         <div class="navigation">
-            <h6>Navigation</h6>
+            <div class="navigationTitle">
+                <div class="triangle-right"></div>
+                <span>Navigation</span>
+
+            </div>
             <ul>
                 <li><a href="#WHAT">What is this?</a></li>
                 <li><a href="#HOW">How does this work?</a></li>
@@ -89,7 +111,8 @@
         <hr>
         <div id="WHAT">
             <h1>What is this?</h1>
-            <p>This page was inspired by a <a href="#">tweet from Salma </a>. Pretty HTML only pages are difficult to make well,
+            <p>This page was inspired by a <a href="#">tweet from Salma </a>. Pretty HTML only pages are difficult to
+                make well,
                 and accessible. But here we are. I'm trying my best.</p>
         </div>
         <hr>
@@ -102,8 +125,8 @@
                 this purpose. The presentation role tells the browser to not expose the table and its tabluar children
                 in the accessibility tree. This will make it easier to navigate for assistive technology.</p>
             <p>I'm also leveraging some deprecated HTML elements from HTML 3.2 that you should never use. In order to be
-                "compliant", I've added the HTML 3.2 doctype at the top of the page:                
-                 <code>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"&gt;</code>
+                "compliant", I've added the HTML 3.2 doctype at the top of the page:
+                <code>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"&gt;</code>
                 This helps give a hint to the browser that we are going to use some older stuff.
             </p>
             <p>HOWEVER, I'm also using some newer things such as details/summary, section, main, header, and footer. So
@@ -116,7 +139,8 @@
         <div id="BUT">
             <h1>But why?</h1>
             <img src="https://c.tenor.com/KjJTBQ9lftsAAAAd/why-huh.gif" alt="">
-            <p>I make terrible things. This was an exciting <a href="#">nerd snipe</a> on a sunday, And I took up the challenge!
+            <p>I make terrible things. This was an exciting <a href="#">nerd snipe</a> on a sunday, And I took up the
+                challenge!
 
             </p>
         </div>
@@ -126,4 +150,5 @@
         <p>(One marquee for good measure...)</p>
     </footer>
 </body>
+
 </html>
