--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML ONLY</title>
+    <link rel="icon" href="/assets/icon.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,6 +72,12 @@
             cursor: pointer;
         }
 
+        a:link {
+            color: aqua;
+        }
+        .linkSpan {
+            color: #0000EE;
+        }
         .triangle-right {
             width: 0;
             height: 0;
@@ -111,7 +118,7 @@
         <hr>
         <div id="WHAT">
             <h1>What is this?</h1>
-            <p>This page was inspired by a <a href="#">tweet from Salma </a>. Pretty HTML only pages are difficult to
+            <p>This page was inspired by a <a href="#" ><span class="linkSpan">tweet from Salma</span> </a>. Pretty HTML only pages are difficult to
                 make well,
                 and accessible. But here we are. I'm trying my best.</p>
         </div>
@@ -126,7 +133,9 @@
                 in the accessibility tree. This will make it easier to navigate for assistive technology.</p>
             <p>I'm also leveraging some deprecated HTML elements from HTML 3.2 that you should never use. In order to be
                 "compliant", I've added the HTML 3.2 doctype at the top of the page:
-                <code>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"&gt;</code>
+                <br>
+                <code>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"&gt;</code> 
+                <br>
                 This helps give a hint to the browser that we are going to use some older stuff.
             </p>
             <p>HOWEVER, I'm also using some newer things such as details/summary, section, main, header, and footer. So
@@ -139,7 +148,7 @@
         <div id="BUT">
             <h1>But why?</h1>
             <img src="https://c.tenor.com/KjJTBQ9lftsAAAAd/why-huh.gif" alt="">
-            <p>I make terrible things. This was an exciting <a href="#">nerd snipe</a> on a sunday, And I took up the
+            <p>I make terrible things. This was an exciting <a href="#"><span class="linkSpan">nerd snipe</span></a> on a sunday, And I took up the
                 challenge!
 
             </p>
