Fix navigation item missing text

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <li><a href="#WHAT">What is this?</a></li>
                 <li><a href="#HOW">How does this work?</a></li>
                 <li><a href="#BUT">But why?</a></li>
-                <li><a href="#">Frameset version</a></li>
+                <li><a href="#">Frameset version <br>(New in 2024)</a></li>
 
             </ul>
         </div>
